--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@
                          <h6> </h6>
                          <div id="currentMap">Map</div>
                     </div>
-                    <div id="weather" class="weather">            
-                         <h6> </h6>
-                         <div id="today-weather">Weather Box</div>
+                    <div class="weather loading">
+                         <h2 class="capital-name" id="capital-name">Weather in Ottawa</h2>
+                         <h1 class="temp">-5° C</h1>
+                         <img src="" alt="" class="icon" />
+                         <div class="description">Cloudy</div>
+                         <div class="humidity">Humidity: 60%</div>
+                         <div class="wind">Wind speed: 6.2 km/h</div>
                     </div>
                </div> 
           </article>
