--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
                     <button id="submit-btn" type="button" class="btn">Search</button>     
                </div>
                <!-- THIS NEEDS TO BE DONE TO COMPLETE PROJECT CRITERIA -->
-               <div id="previos-search" class="previos-search">
-                    
-               </div>
+               <div id="previos-search" class="previos-search"></div>
+               <div class="clearBtn">Clear Search History</div>
           </div>
           <!-- Main content boxes -->
           <article id="content" class="row">
