--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                          <h6> </h6>
                          <div id="currentMap">Map</div>
                     </div>
+                    <!-- weather box -->
                     <div class="weather loading">
                          <h2 class="capital-name" id="capital-name">Weather in Ottawa</h2>
                          <h1 class="temp">-5° C</h1>
