--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
                     <h6> </h6>
                     <div id="today-rate"></div>
                </div>   
-               <h4 id="capital-name">Capital Name</h4>
+               <h4 class=capital-name id="capital-name">Capital Name</h4>
                <div id="mapWeatherContainer" class="mapWeatherContainer">
                     <div id="map" class="map">            
                          <h6> </h6>
                          <div id="currentMap">Map</div>
                     </div>
                     <!-- weather box -->
-                    <div class="weather loading">
+                    <div class="weather">
                          <h2 class="capital-name" id="capital-name">Weather in Ottawa</h2>
                          <h1 class="temp">-5° C</h1>
                          <img src="" alt="" class="icon" />
