--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           <!-- Search tab -->
           <div id="search" class="search-container">
                <div id="calendar-holder" class="calendar-holder">Current date</div>
-               <div class="current-search">Search for a Country: 
-                    <input id="input" type="text">
+               <div class="current-search">
+                    <input id="input" type="text" placeholder="Type search country: ">
                     <button id="submit-btn" type="button" class="btn">Search</button>     
                </div>
                <!-- THIS NEEDS TO BE DONE TO COMPLETE PROJECT CRITERIA -->
