--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </div>
                     <!-- weather box -->
                     <div class="weather">
-                         <h2 class="capital-name" id="capital-name">Weather in Ottawa</h2>
+                         <!-- <h2 class="capital-name" id="capital-name">Weather in Ottawa</h2> -->
                          <h1 class="temp">-5° C</h1>
                          <img src="" alt="" class="icon" />
                          <div class="description">Cloudy</div>
