--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Team-project-01</title>
-     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="./assets/css/style.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"> 
      <script src="https://maps.google.com/maps/api/js?key=AIzaSyAClDUtf010ZLBuUcuto6WRGodJCVbiWnc" ></script>     
-     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-     <script src="./script.js"></script>
+     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>     
      <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"></script>
 </head>
 
@@ -30,9 +29,8 @@
                     <button id="submit-btn" type="button" class="btn">Search</button>     
                </div>
                <!-- THIS NEEDS TO BE DONE TO COMPLETE PROJECT CRITERIA -->
-               <div id="previos-search" class="previos-search">
-                    
-               </div>
+               <div id="previous-search" class="previous-search"> </div>
+               <div class="clearBtn">Clear Search History</div>
           </div>
           <!-- Main content boxes -->
           <article id="content" class="row">
@@ -60,6 +58,7 @@
                </div> 
           </article>
      </main>
+     <script src="./assets/js/script.js"></script>
 </body>
 
 <footer>
